Driver, controller implementation and openapi fixes
